logs/sam3d_5239320.err
  File "/dss/dsshome1/0D/ru47tac2/projects/segrap2025/SAM-Med3D/train.py", line 526
    print(f"Validation error: {str(e)")
                                      ^
SyntaxError: f-string: expecting '}'
